[gd_scene load_steps=41 format=3 uid="uid://1dbon4734y27"]

[ext_resource type="Texture2D" uid="uid://m0t3tv3uelw0" path="res://Art/Legacy-Fantasy - High Forest 2.3/Mob/Snail/Dead-Sheet.png" id="1_12x2h"]
[ext_resource type="Script" path="res://Characters/Snail/snail.gd" id="1_si5um"]
[ext_resource type="Texture2D" uid="uid://c2orjax1xhc38" path="res://Art/Legacy-Fantasy - High Forest 2.3/Mob/Snail/walk-Sheet.png" id="1_snwm8"]
[ext_resource type="Texture2D" uid="uid://cmk8035r73vyh" path="res://Art/Legacy-Fantasy - High Forest 2.3/Mob/Snail/Hide-Sheet.png" id="2_floli"]
[ext_resource type="Script" path="res://Characters/character_state_machine.gd" id="5_6p6ib"]
[ext_resource type="Script" path="res://Characters/Snail/walk_state.gd" id="5_24ppd"]
[ext_resource type="Texture2D" uid="uid://rteg8nrfelj" path="res://Art/Legacy-Fantasy - High Forest 2.3/Mob/Snail/all.png" id="5_gx1jw"]
[ext_resource type="Script" path="res://Characters/Snail/dead_state.gd" id="6_4h68w"]
[ext_resource type="Script" path="res://Characters/Snail/hit_state.gd" id="7_1q8xk"]
[ext_resource type="Script" path="res://Characters/Snail/hide_state.gd" id="9_f5t2e"]
[ext_resource type="PackedScene" uid="uid://drcnnxoefc78u" path="res://Components/health_component.tscn" id="12_wqe0r"]
[ext_resource type="PackedScene" uid="uid://dfyfr02bf4xw8" path="res://Components/hitbox_component.tscn" id="13_dt0ud"]
[ext_resource type="Script" path="res://Characters/state_debug.gd" id="13_rgnkk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urxal"]
size = Vector2(27.5, 22)

[sub_resource type="Animation" id="Animation_rtmjc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uhq36"]
resource_name = "dead"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_12x2h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_kbxav"]
resource_name = "bite"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_floli")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_rx2gx"]
resource_name = "stun"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_gx1jw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_v1s00"]
resource_name = "unhide"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_gx1jw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_8aynv"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_snwm8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w6pc1"]
_data = {
"RESET": SubResource("Animation_rtmjc"),
"dead": SubResource("Animation_uhq36"),
"hide": SubResource("Animation_kbxav"),
"stun": SubResource("Animation_rx2gx"),
"unhide": SubResource("Animation_v1s00"),
"walk": SubResource("Animation_8aynv")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cxq0s"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nk1uu"]
animation = &"hide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1p2wn"]
animation = &"stun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_g8pjs"]
animation = &"unhide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cveap"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bwkig"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0peq0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c4oii"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tlyqf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hgkej"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nxu0f"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_54qkt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q68dm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d7ps0"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ywgvl"]
states/dead/node = SubResource("AnimationNodeAnimation_cxq0s")
states/dead/position = Vector2(669, 100)
states/hide/node = SubResource("AnimationNodeAnimation_nk1uu")
states/hide/position = Vector2(421, 205)
states/stun/node = SubResource("AnimationNodeAnimation_1p2wn")
states/stun/position = Vector2(421, -32)
states/unhide/node = SubResource("AnimationNodeAnimation_g8pjs")
states/unhide/position = Vector2(588, 204)
states/walk/node = SubResource("AnimationNodeAnimation_cveap")
states/walk/position = Vector2(421, 100)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_bwkig"), "walk", "dead", SubResource("AnimationNodeStateMachineTransition_0peq0"), "walk", "hide", SubResource("AnimationNodeStateMachineTransition_c4oii"), "hide", "unhide", SubResource("AnimationNodeStateMachineTransition_tlyqf"), "unhide", "walk", SubResource("AnimationNodeStateMachineTransition_hgkej"), "unhide", "hide", SubResource("AnimationNodeStateMachineTransition_nxu0f"), "walk", "stun", SubResource("AnimationNodeStateMachineTransition_54qkt"), "stun", "walk", SubResource("AnimationNodeStateMachineTransition_q68dm"), "stun", "dead", SubResource("AnimationNodeStateMachineTransition_d7ps0")]
graph_offset = Vector2(0, -73.0387)

[sub_resource type="Gradient" id="Gradient_sa5mx"]
offsets = PackedFloat32Array(0, 0.940898, 1)
colors = PackedColorArray(0.984314, 0.976471, 0.980392, 1, 0.984314, 0.976471, 0.980392, 0.588235, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_53r23"]
gradient = SubResource("Gradient_sa5mx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5y04a"]
emission_shape = 1
emission_sphere_radius = 5.0
particle_flag_disable_z = true
spread = 80.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 50.0
damping_max = 50.0
scale_min = 0.3
color = Color(0.984314, 0.976471, 0.980392, 1)
color_ramp = SubResource("GradientTexture1D_53r23")

[sub_resource type="CanvasTexture" id="CanvasTexture_000cw"]

[node name="Snail" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_si5um")

[node name="debug" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_left = -34.0
offset_top = -32.0
offset_right = 34.0
offset_bottom = -6.0
text = "state"
horizontal_alignment = 1
script = ExtResource("13_rgnkk")
state_machine = NodePath("../SnailStateMachine")

[node name="Hitbox2" type="CollisionShape2D" parent="."]
position = Vector2(1, 5)
shape = SubResource("RectangleShape2D_urxal")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_floli")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w6pc1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ywgvl")
anim_player = NodePath("../AnimationPlayer")

[node name="SnailStateMachine" type="Node" parent="." node_paths=PackedStringArray("animation_tree", "initial_state")]
script = ExtResource("5_6p6ib")
animation_tree = NodePath("../AnimationTree")
initial_state = NodePath("Walk")

[node name="Walk" type="Node" parent="SnailStateMachine"]
script = ExtResource("5_24ppd")

[node name="Dead" type="Node" parent="SnailStateMachine"]
script = ExtResource("6_4h68w")
can_move = false

[node name="Hit" type="Node" parent="SnailStateMachine"]
script = ExtResource("7_1q8xk")
can_move = false

[node name="Hide" type="Node" parent="SnailStateMachine" node_paths=PackedStringArray("hitbox_component")]
script = ExtResource("9_f5t2e")
hitbox_component = NodePath("../../HitboxComponent")
can_move = false

[node name="HealthComponent" parent="." instance=ExtResource("12_wqe0r")]
max_health = 20.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "sparks_particle") instance=ExtResource("13_dt0ud")]
collision_layer = 4
collision_mask = 2
health_component = NodePath("../HealthComponent")
sparks_particle = NodePath("../SparksParticle")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(1.25, 5)
shape = SubResource("RectangleShape2D_urxal")

[node name="SparksParticle" type="GPUParticles2D" parent="."]
position = Vector2(2, 3)
rotation = -1.57079
emitting = false
process_material = SubResource("ParticleProcessMaterial_5y04a")
texture = SubResource("CanvasTexture_000cw")
lifetime = 0.15
one_shot = true
explosiveness = 0.7
trail_enabled = true
trail_lifetime = 0.1
trail_sections = 2
trail_section_subdivisions = 2

[connection signal="animation_finished" from="AnimationTree" to="SnailStateMachine/Dead" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="SnailStateMachine/Hide" method="_on_animation_tree_animation_finished"]
[connection signal="damaged" from="HealthComponent" to="SnailStateMachine/Hit" method="_on_health_component_damaged"]
[connection signal="body_entered" from="HitboxComponent" to="SnailStateMachine/Hide" method="_on_hitbox_component_body_entered"]
[connection signal="body_exited" from="HitboxComponent" to="SnailStateMachine/Hide" method="_on_hitbox_component_body_exited"]
